--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-django==1.9.7
+django==1.10b1
 gunicorn==19.6.0
-celery==3.1.23
+celery==4.0.0rc3
 djangorestframework==3.3.3
-psycopg2==2.6.1
+psycopg2==2.6.2
 sphinx==1.4.4
 sphinx-autobuild==0.6.0
 sphinx_rtd_theme
