--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-django==1.10b1
+django
 gunicorn==19.6.0
 celery==4.0.0rc3
-djangorestframework==3.3.3
+djangorestframework
 psycopg2==2.6.2
 sphinx==1.4.4
 sphinx-autobuild==0.6.0
 sphinx_rtd_theme==0.1.9
 coverage==4.1
 codacy-coverage==1.2.18
+PyStaticConfiguration
