--- a/circle.yml
+++ b/circle.yml
@@ -1,17 +1,24 @@
+general:
+  artifacts:
+    - "htmlcov"
+
 machine:
   services:
     - docker
 
 
 dependencies:
-  override:
+  pre:
     - docker info
-    - docker build -t mwaaas/ussd-airflow .
+    - sudo pip install docker-compose --upgrade
+  post:
+    - docker-compose up -d
 
 
 test:
   override:
-    - docker run -d -p 9000:80 mwaaas/ussd-airflow; sleep 10
     - curl --retry 10 --retry-delay 5 -v http://localhost:9000
-    - docker run -d mwaaas/ussd-airflow coverage run manage.py test
+    - >
+    docker-compose run app coverage run --omit=*test*,*ven* manage.py test
+     && curl -s https://codecov.io/bash && coverage report --fail-under=100 && coverage html
     - docker run -d -e CODACY_PROJECT_TOKEN=7911468d4aa94f0f941148a355a953d0 mwaaas/ussd-airflow python-codacy-coverage -r coverage.xml
