--- a/circle.yml
+++ b/circle.yml
@@ -1,7 +1,8 @@
 machine:
+  pre:
+    - curl -sSL https://s3.amazonaws.com/circle-downloads/install-circleci-docker.sh | bash -s -- 1.10.0
   services:
     - docker
-
 
 dependencies:
   pre:
