--- a/circle.yml
+++ b/circle.yml
@@ -15,4 +15,4 @@ dependencies:
 test:
   override:
     - curl --retry 10 --retry-delay 5 -v http://localhost:9000
-    - docker-compose run app coverage run --omit=*test*,*ven* manage.py test && bash <(curl -s https://codecov.io/bash) && python-codacy-coverage -r coverage.xml
+    - docker-compose run app bash -c 'coverage run --omit=*test*,*ven* manage.py test && bash <(curl -s https://codecov.io/bash) && python-codacy-coverage -r coverage.xml'
