added codecov token in the environment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,7 @@ services:
     environment:
       - CELERY_BROKER_URL=amqp://guest:guest@rabbitmq//
       - CODACY_PROJECT_TOKEN=7911468d4aa94f0f941148a355a953d0
+      - CODECOV_TOKEN=b9e923ec-1dea-4111-bc1c-ecaf28c0f0da
       - 'DATABASE_URL=postgres://postgres:django-ussd-airflow@db:5432/django-ussd-airflow'
     labels:
       - "traefik.frontend.rule=PathPrefix:/"
