Feature/list screen (#12)
* to allow all host

* added list screen

* pip8

* added test coverage

* increased test coverage

* pep8

* removed a duplicate test

--- a/ussd/tests/sample_screen_definition/invalid_menu_screen_conf.yml
+++ b/ussd/tests/sample_screen_definition/invalid_menu_screen_conf.yml
@@ -39,6 +39,11 @@ rice_chosen:
     - text: back
     - next_screen: choose_meal
 
-
+# invalid list screen
+types_of_vegetables:
+  type: menu_screen
+  text: Choose one of the following vegetables
+  items:
+    text: Vege "{{ item }}"
 
 
