--- a/circle.yml
+++ b/circle.yml
@@ -5,10 +5,9 @@ machine:
     - docker
 
 dependencies:
-  pre:
+  override:
     - docker info
     - sudo pip install docker-compose --upgrade
-  post:
     - docker-compose up -d
 
 
@@ -16,3 +15,9 @@ test:
   override:
     - curl --retry 10 --retry-delay 5 -v http://localhost:9000
     - docker-compose run app bash -c 'coverage run --omit=*test*,*ven* manage.py test && bash <(curl -s https://codecov.io/bash) && python-codacy-coverage -r coverage.xml'
+
+deployment:
+  release:
+    tag: /v[0-9]+(\.[0-9]+)*/
+    commands:
+      - docker-compose run --no-deps -e PYPI_PASSWORD=$PYPI_PASSWORD -e PYPI_USER=$PYPI_USER -e VERSION=$CIRCLE_TAG app bash -c 'printf "[pypirc]\nservers = pypi\n[server-login]\nusername:$PYPI_USER\npassword:$PYPI_PASSWORD" > ~/.pypirc && python setup.py sdist upload'
