--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,10 @@
-django
+-r default.txt
 gunicorn==19.6.0
 celery==4.0.0rc3
-djangorestframework
 psycopg2==2.6.2
 sphinx==1.5.1
 sphinx-autobuild==0.6.0
 sphinx_rtd_theme==0.1.9
 coverage==4.1
 codacy-coverage==1.2.18
-PyStaticConfiguration
-structlog
-jinja2>=2.8
 dj-database-url==0.4.1
