enhanced variable declaration to support nesting (#50)

--- a/ussd/tests/sample_screen_definition/valid_router_screen_conf.yml
+++ b/ussd/tests/sample_screen_definition/valid_router_screen_conf.yml
@@ -29,7 +29,7 @@ default_screen:
 sample_router_screen_with_loop:
   type: router_screen
   default_next_screen: default_screen
-  with_items: "{{ phone_numbers}}"
+  with_items: "{{ phone_numbers[phone_number]}}"
   router_options:
     - expression: "{{ item == 'registered' }}"
       next_screen: registred_screen
