Feature/remove default key from non initial screens (#51)
*  initialise UssdRequest with default_language atrribute
If default_language is not provided fall back to English

*  get default language from UssdRequest class

Text from non initial_screens do not require do not require a default language

*  Check if variables key is in initial_screen dict
Reason to diffrentiate initial screens used to define default language

* check if default_language in defined in the namespace
If defined use it to set default_language on UssdRequest object
If default_language is not provided default to default_language in UssdRequest

* Remove validate_text
Aim is to stop checking for default language on all text instances

*  remove text option
default language on text is not been tested as default language is been texted
by initial_screen

* Use or to evaluate statement

Less code

*  check for default language
in initial screen, read its next_handler and handle it

*  Check if initial screen is a dict
It a fix
Initial screen of this type was failing
initial_screen:
  screen: Elias
  default_language: en

fixed checking if initial screen is a dict,if true get screen and use as screen_content

* define an screen and default_screen variables
Following this documentation
http://django-ussd-airflow.readthedocs.io/en/latest/tutorial.html#initial-screen-type-initial-screen

* git remove default from screen definitions

* remove default language

--- a/ussd/tests/sample_screen_definition/valid_input_screen_conf.yml
+++ b/ussd/tests/sample_screen_definition/valid_input_screen_conf.yml
@@ -1,4 +1,6 @@
-initial_screen: enter_height
+initial_screen:
+  screen: enter_height
+  default_language: en
 
 enter_height:
   type: input_screen
@@ -7,7 +9,7 @@ enter_height:
       Enter your height
     sw: |
       Weka ukubwa lako
-    default: en
+
   input_identifier: height
   next_screen: enter_age
   validators:
@@ -17,7 +19,6 @@ enter_height:
           Enter number between 1 and 7
         sw: |
           Weka namba kutoka 1 hadi 7
-        default: en
 
 enter_age:
     type: input_screen
@@ -26,7 +27,7 @@ enter_age:
         Enter your age
       sw: |
         Weka miaka yako
-      default: en
+
     input_identifier: age
     next_screen: show_information
     validators:
@@ -43,7 +44,6 @@ enter_age:
               Number over 100 is not allowed
             sw: |
               Nambari juu ya 100 haikubalishwi
-            default: en
 
 show_information:
     text:
@@ -53,7 +53,6 @@ show_information:
       sw: |
         Miaka yako in {{ age }} na ukubwa wako in {{ height }}.
         Weka kitu ingine yoyote unende kwenye screen ya kwanza
-      default: en
     type: input_screen
     input_identifier: foo
     next_screen: enter_height
