http screen to store status_code and response body (#53)

--- a/ussd/tests/sample_screen_definition/valid_http_screen_conf.yml
+++ b/ussd/tests/sample_screen_definition/valid_http_screen_conf.yml
@@ -56,4 +56,7 @@ http_async_example:
 
 end_of_http_example:
   type: quit_screen
-  text: Done
+  text: >
+    Testing response is being saved in session status code is
+    {{http_post_response.status_code}} and content is
+    {{http_post_response.content}}
