previous build broke http_screen api (#54)
* previous build broke http_screen api

* refactored http_screen to save all attributes in one place

* removed unused variable

--- a/ussd/tests/sample_screen_definition/valid_http_screen_conf.yml
+++ b/ussd/tests/sample_screen_definition/valid_http_screen_conf.yml
@@ -59,4 +59,4 @@ end_of_http_example:
   text: >
     Testing response is being saved in session status code is
     {{http_post_response.status_code}} and content is
-    {{http_post_response.content}}
+    {{http_post_response.balance}}.
