--- a/ussd/tests/sample_screen_definition/valid_quit_screen_conf.yml
+++ b/ussd/tests/sample_screen_definition/valid_quit_screen_conf.yml
@@ -2,4 +2,4 @@ initial_screen: example_of_quit_screen
 
 example_of_quit_screen:
   type: quit_screen
-  text: End of this session
+  text: "Test getting variable from os environmen. {{TEST_VARIABLE}}"
