fixed a bug in http request if response body is a json (#66)

--- a/ussd/tests/sample_screen_definition/valid_http_screen_conf.yml
+++ b/ussd/tests/sample_screen_definition/valid_http_screen_conf.yml
@@ -58,5 +58,6 @@ end_of_http_example:
   type: quit_screen
   text: >
     Testing response is being saved in session status code is
-    {{http_post_response.status_code}} and content is
-    {{http_post_response.balance}}.
+    {{http_post_response.status_code}} and balance is
+    {{http_post_response.balance}} and full content {{http_post_response.content}}.
+
