added inheritance support on ussd screens (#67)

--- a/ussd/tests/sample_screen_definition/invalid_menu_screen_conf.yml
+++ b/ussd/tests/sample_screen_definition/invalid_menu_screen_conf.yml
@@ -44,6 +44,6 @@ types_of_vegetables:
   type: menu_screen
   text: Choose one of the following vegetables
   items:
-    text: Vege "{{ item }}"
+    text: "Vege {{ item }}"
 
 
