input screen to support menu options (#78)
* input screen to support menu options

* added input screen documentation

* adding menu screen documentation

--- a/ussd/tests/sample_screen_definition/valid_input_screen_conf.yml
+++ b/ussd/tests/sample_screen_definition/valid_input_screen_conf.yml
@@ -31,6 +31,11 @@ enter_age:
 
     input_identifier: age
     next_screen: show_information
+    options:
+      - text:
+          en: back
+          sw: rudi
+        next_screen: enter_height
     validators:
         - regex: ^[0-9]{1,7}$
           text:
