--- a/ussd/tests/sample_screen_definition/invalid_input_screen_conf.yml
+++ b/ussd/tests/sample_screen_definition/invalid_input_screen_conf.yml
@@ -8,11 +8,12 @@ enter_height:
   validators:
     - regex: ^[0-9]{1,7}$
 
-# missing input_indentifier
+# missing input_indentifier and invalid options
 enter_age:
     type: input_screen
     text: Enter your age\n
     next_screen: thank_you_screen
+    options: True
     validators:
         - regex: ^[0-9]{1,7}$
           text: Only numbers are allowed
