Feature/adding pagination (#87)
* added experimental pagination feature

* added experimental pagination feature

* removed doc strings that are not being used

--- a/ussd/tests/sample_screen_definition/valid_menu_screen_conf.yml
+++ b/ussd/tests/sample_screen_definition/valid_menu_screen_conf.yml
@@ -1,4 +1,7 @@
-initial_screen: choose_meal
+initial_screen:
+  type: initial_screen
+  next_screen: choose_meal
+  ussd_text_limit: 90
 
 
 choose_meal:
@@ -15,6 +18,8 @@ choose_meal:
         next_screen: types_of_drinks
       - text: vegetables
         next_screen: types_of_vegetables
+      - text: test pagination
+        next_screen: test_text_prompt_pagination
 
 
 types_of_food:
@@ -62,7 +67,7 @@ types_of_vegetables:
 
 choose_quantity:
   type: menu_screen
-  text: Choose vegetable quantity
+  text: Choose vegetable size
   items:
     text: "{{ key }} at Ksh {{ value }}"
     value:  "{{ key }}"
@@ -122,3 +127,78 @@ test_invalid_jija_variable:
     session_key: selected_vegetable
     next_screen: choose_quantity
 
+
+# The screens below are testing pagination
+test_text_prompt_pagination:
+  type: menu_screen
+  text: |
+    Ussd airflow should be able to wrap anytext that is larger than the one
+    specified into two screens.
+  options:
+    - text: next
+      next_screen: test_pagination_in_menu_options
+
+test_pagination_in_menu_options:
+  type: menu_screen
+  text: |
+    An example of screen with multiple options that need to be paginated
+  options:
+    - text: screen_with_both_text_and_menu_options_pagination
+      next_screen: test_pagination_in_both_text_and_options
+    - text: screen_with_both_text_item_options_pagination
+      next_screen: test_pagination_in_both_text_options_items
+
+test_pagination_in_both_text_and_options:
+  type: menu_screen
+  text: |
+    This screen has both large text and options that exceed the limit required
+    so both the prompt and options will be paginated.
+  options:
+    - text: go back to the previous screen
+      next_screen: test_pagination_in_menu_options
+    - text: quit this session
+      next_screen: last_screen
+    - text: this options will be showed in the next_screen
+      next_screen: test_pagination_in_both_text_options_items
+
+test_pagination_in_both_text_options_items:
+  type: menu_screen
+  text: |
+    This screen has both large text, options, items that exceed ussd text limit
+    part of this text would be displayed in the next screen
+  items:
+    text: "{{item}}"
+    value: "{{item}}"
+    next_screen: last_screen
+    session_key: testing
+    with_items:
+      - apple
+      - boy
+      - cat
+      - dog
+      - egg
+      - frog
+      - girl
+      - house
+      - ice
+      - joyce
+      - kettle
+      - lamp
+      - mum
+      - nurse
+      - ostrich
+      - pigeon
+      - queen
+      - river
+      - sweet
+      - tiger
+      - umbrella
+      - van
+      - water
+  options:
+    - text: quit_session
+      next_screen: last_screen
+
+last_screen:
+  type: quit_screen
+  text: end of session {{testing}}
