fixed pypirc file

--- a/circle.yml
+++ b/circle.yml
@@ -21,4 +21,4 @@ deployment:
   release:
     tag: /v[0-9]+(\.[0-9]+)*/
     commands:
-      - docker-compose run --no-deps -e PYPI_PASSWORD=$PYPI_PASSWORD -e PYPI_USER=$PYPI_USER -e VERSION=$CIRCLE_TAG app bash -c 'printf "[pypirc]\nusername:$PYPI_USER\npassword:$PYPI_PASSWORD" > ~/.pypirc && python setup.py sdist upload'
+      - docker-compose run --no-deps -e PYPI_PASSWORD=$PYPI_PASSWORD -e PYPI_USER=$PYPI_USER -e VERSION=$CIRCLE_TAG app bash -c 'printf "[distutils]\nindex-servers = pypi \n[pypi]\nusername:$PYPI_USER\npassword:$PYPI_PASSWORD" > ~/.pypirc && python setup.py sdist upload'
