--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,7 @@ services:
       - rabbitmq
     volumes:
       - ./:/usr/src/app
+    command: bash -c "./wait-for-it.sh -t 300 db:5432 && ./run.sh"
     links:
       - db
       - rabbitmq
