--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,7 @@ services:
       - rabbitmq
     volumes:
       - ./:/usr/src/app
+      - $HOME/.aws:/root/.aws
     command: bash -c "./wait-for-it.sh -t 300 db:5432 && ./run.sh"
     links:
       - db
@@ -55,6 +56,7 @@ services:
       - 'DATABASE_URL=postgres://postgres:django-ussd-airflow@db:5432/django-ussd-airflow'
       - TEST_VARIABLE=variable_test
       - ENVIRONMENT=sample_variable_two
+      - DYNAMODB_TABLE=journeyTable
     labels:
       - "traefik.frontend.rule=PathPrefix:/"
       - "traefik.backend=web"
@@ -82,6 +84,7 @@ services:
     environment:
       -  C_FORCE_ROOT=true
       -  CELERY_BROKER_URL=amqp://guest:guest@rabbitmq//
+      -  DYNAMODB_TABLE=journeyTable
     labels:
       - "traefik.enable=false"
 
@@ -105,3 +108,17 @@ services:
       - 7000:8000
     labels:
       - "traefik.enable=false"
+
+  dynamodb:
+    image: cnadiminti/dynamodb-local:2017-02-16
+    ports:
+      - 8781:8000
+
+  ansible:
+    image: mwaaas/ansible_playbook:2.4.1.0-1.3.4
+    depends_on:
+      - dynamodb
+    volumes:
+      - $HOME/.aws:/root/.aws
+      - ./:/usr/src/app
+    
